k8s/nodesite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodesite-service
spec:
  type: ClusterIP
  selector:
    app: nodesite
  ports:
    - port: 8080
      targetPort: 8080
