k8s/nodesite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodesite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: local.ecosia.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nodesite-service
            port:
              number: 8080
